# pinned-std-vector

./: .clang-format  .gitignore  CMakeLists.txt  README.md  setup.py
apps/: CMakeLists.txt  app_bandwidth_tester.cu  app_bandwidth_tester_iters.cu  benchmark_tensor_transfer.py  benchmark_tensor_transfer_appendix.py
cmake/: FindPybind11.cmake  playgroundConfig.cmake.in
python/: CMakeLists.txt
python/apps/: benchmark_tensor_transfer.py
python/src/: bindings.cpp  pyarray_utils.h  pyplayground.py
python/tests/: test_interface.py
scripts/: benchmark_tensor_transfer.py
src/: CMakeLists.txt  pinned_vector.cpp
src/include/playground/: pinned_vector.h
tests/: CMakeLists.txt  catch_initializer.cpp  test_pinned_vector.cpp
